8/19/11 reverse order of colors for rainbow mep, so that red is negative
8/19/11 implement Option menu item to switch MEP color scheme to "rainbow" for "Real Molecules" tab
8/19/11 move bond type indicator closer to EN sliders, since they are closely related
8/19/11 fix seams in rainbow surface color key
8/19/11 add titles to surface color keys, fix black outline
8/18/11 first pass at isosurface color keys
8/18/11 add stubs for Options "rainbow mep" menu item
8/18/11 add empty Options menu to menubar
8/18/11 add View property and check box for "Electronegativity Table"
8/18/11 improved rotate cursor image
8/18/11 fix: atom labels "on" by default in "Real Molecules" tab
# 0.00.11 (55434) Aug 18, 2011
8/18/11 add new rotate cursor, created by NP
8/18/11 delete CO from real molecules, since "it could be confusing"
8/18/11 use HF as the default real molecule
8/18/11 initialize EN slider for atom B to middle value in all tabs
8/18/11 make the E-field plates brighter gray to indicate "on", to avoid chem/physics inconsistency with red/blue
8/18/11 encapsulate L&F of "Reset All" button, disable confirmation
8/17/11 initialize view properties in constructor, so that Reset All works properly
8/17/11 for triatomic molecule, make molecular dipole on by default, bond dipole off by default
8/17/11 put 2D isosurfaces behind molecule, so that it's possible to change bond angle and rotate isosurface
8/17/11 delete periodic table, replace with placeholder for electronegativity table
8/17/11 change "Isosurface" label to "Surface", also change internally
8/17/11 change request: pause animation of E-field alignment when an EN slider is being dragged
8/17/11 change request: when changing bond angle, move the atom that's being dragged to the front
# 0.00.10 (55361) Aug 16, 2011
8/16/11 replace PolarImmutableVector2D with ImmutableVector.parseMagnitudeAndAngle
8/16/11 add rotate cursor, for discussion
8/16/11 use bond dipole instead of deltaEN in diatomic molecule and bond type indicator